--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <hr>
         <div class="control-row">
-            <button class="btn btn-download" id="btnDownload" disabled onclick="downloadContourMap()">⬇️ 下载俯视图</button>
+            <button class="btn btn-download" id="btnDownload" disabled onclick="downloadContourMap()">⬇️ 下载等高线图</button>
             <div style="font-size:11px; color:#888; line-height:1.4;">
                 * <b>TIN 线性插值</b> (绝对精准)<br>
                 * 5m 等高线，图例对齐
