--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Web 3D 地形 - TIN 线性插值版</title>
+    <title>三维地形查看</title>
     <script src="https://cdn.plot.ly/plotly-2.24.1.min.js"></script>
     <!-- D3 Delaunay 库 -->
     <script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6.0.4/dist/d3-delaunay.min.js"></script>
